# snowflake-dbt-analytics-platform

./: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles_example.yml  pyproject.toml  requirements.txt
.github/workflows/: dbt-ci.yml
analysis/: sample_queries.sql
macros/: cents_to_dollars.sql  generate_schema_name.sql  safe_cast.sql  union_relations.sql
models/marts/core/: dim_customer.sql  dim_date.sql  dim_employee.sql  dim_event.sql  dim_menu_item.sql  dim_supplier.sql  dim_venue.sql  fct_orders.sql  fct_sales_line_items.sql  schema.yml
models/marts/finance/: fct_daily_venue_sales.sql  schema.yml
models/metrics/: exposures.yml  metric_sales_summary.sql  schema.yml
models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_employees.sql  stg_events.sql  stg_inventory.sql  stg_menu_items.sql  stg_order_items.sql  stg_orders.sql  stg_suppliers.sql  stg_venues.sql
scripts/: load_seeds_to_snowflake.py  snowflake_setup.sql
seeds/: raw_customers.csv  raw_employees.csv  raw_events.csv  raw_inventory.csv  raw_menu_items.csv  raw_order_items.csv  raw_orders.csv  raw_suppliers.csv  raw_venues.csv  schema.yml
snapshots/: snap_customers.sql  snap_menu_item_prices.sql
tests/generic/: test_positive_value.sql
tests/singular/: assert_net_sales_non_negative.sql  assert_no_orphaned_order_items.sql  assert_order_total_matches_line_items.sql  assert_taxes_non_negative.sql
